src/objects/ACETLetterVisiblebyCalltopicandProfile__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines the Letters visibility in Create letter page as per the Call topic and Profile</description>
    <fields>
        <fullName>ACETLetterVisiblebyCalltopicandProfilEID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ACETLetterVisiblebyCalltopicandProfilEID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Broker_Letters_Visible__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee/Broker Letters Visible</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Broker_Profiles__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee/Broker Profiles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_Letters_Visible__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Letters Visible</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_Profiles__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Profiles</label>
        <type>TextArea</type>
    </fields>
    <label>ACETLetterVisiblebyCalltopicandProfile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee_Broker_Letters_Visible__c</columns>
        <columns>Employee_Broker_Profiles__c</columns>
        <columns>Member_Letters_Visible__c</columns>
        <columns>Member_Profiles__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ACETLetterVisiblebyCalltopicandProfilEID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>